feat: add trading system